--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
     <section id="projects">
     <br>
     <h2>Recent Projects</h2>
-      <div class="project-boxes">  
+      <div id="project-boxes">  
         <div class="project-tile">
           <h3>Tribute Page</h3>
-          <a id="profile-link" href="https://github.com/MrDreKC/fCC_Tribute-Page" target="_blank">GitHub</a>
+          <a class="profile-link" href="https://github.com/MrDreKC/fCC_Tribute-Page" target="_blank">GitHub</a>
         </div>
         <div class="project-tile">
           <h3>Skyline</h3>
-          <a id="profile-link" href="https://github.com/MrDreKC/fCC_Skyline" target="_blank">GitHub</a>
+          <a class="profile-link" href="https://github.com/MrDreKC/fCC_Skyline" target="_blank">GitHub</a>
         </div>
         <div class="project-tile">
           <h3>Procdut Page</h3>
-          <a id="profile-link" href="https://github.com/MrDreKC/fCC_Product-Page" target="_blank">GitHub</a>
+          <a class="profile-link" href="https://github.com/MrDreKC/fCC_Product-Page" target="_blank">GitHub</a>
         </div>
       </div class="project-boxes">
     </section>
@@ -52,10 +52,10 @@
     <section id="contacts">
     <br>
     <h2>Contact Me</h2>
-      <div class="contact-links"> 
-        <a id="contact-link" target="_blank" href="dre_cunningham@yahoo.com">Yahoo</a>
-        <a id="contact-link" target="_blank" href="www.linkedin.com/in/drecunningham">Linkedin</a>
-        <a id="contact-link" target="_blank" href="https://github.com/MrDreKC">GitHub</a> 
+      <div id="contact-links"> 
+        <a class="contact-link" target="_blank" href="dre_cunningham@yahoo.com">Yahoo</a>
+        <a class="contact-link" target="_blank" href="www.linkedin.com/in/drecunningham">Linkedin</a>
+        <a class="contact-link" target="_blank" href="https://github.com/MrDreKC">GitHub</a> 
       </div>
     </section>
     <!--contact -->
