--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <br>
     <h2>Recent Projects</h2>
       <div id="project-boxes">  
-        <div class="project-tile">
+        <div id="project-tile">
           <h3>Tribute Page</h3>
           <a class="profile-link" href="https://github.com/MrDreKC/fCC_Tribute-Page" target="_blank">GitHub</a>
         </div>
