--- a/index.html
+++ b/index.html
@@ -3,61 +3,74 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="styles.css"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css"/>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Personal Portfolio</title>
   </head>
   <body>
-    <!--navbar -->
-    <nav class="nav">
-      <div id="navbar">
-        <a href="#welcome-section">Welcome</a>
+    <!--Navagation-->
+
+    <header class="header">
+      <a href="#" class="logo">MrDreKC</a>
+      <i class='bx bx-menu' id="menu-icon"></i>
+      <nav class="navbar">
+        <a href="#intro" class="active">Welcome</a>
         <a href="#projects">Projects</a>
-        <a href="#contacts">Contact</a>
-      </div>
-    </nav>
-    <!--navbar -->
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
     <!--intro -->
-    <section id="welcome-section">
-      <br>
-      <div class="hero-text">
-        <h1 class="hero-title"> What's Up Everbody, I'm Andre</h1>
-        <p class="hero-desc">A Web Developer located in Guyton,GA. An introvet in the begin, but do open up given time. I enjoy anime, gaming, & comic book movies.Currently focused on Web development, but also learning Python for Software Engineering.</p>  
+
+    <section class="intro" id="intro">
+      <div class="intro-content">
+        <h3> What's Up Everbody</h3> 
+        <h1>Andre C</h1>
+        <h3>I'm a <span>Web Designer</span></h3> 
+        <p>Located in Guyton, GA. An introvet in the begin, but I do open up given time. I enjoy anime, gaming, &amp comic book movies. Currently focused on Web development, but also learning a little Python for Software Engineering.</p> 
+        <div class="social-media">
+          <a href="dre_cunningham@yahoo.com"><i class='bx bxl-yahoo' ></i></a>
+          <a href="www.linkedin.com/in/drecunningham"><i class='bx bxl-linkedin' ></i></a>
+          <a href="https://github.com/MrDreKC"><i class='bx bxl-github' ></i></a>
+        </div> 
       </div>
     </section>
-    <br>
-    <!--intro -->
+    
     <!--projects -->
-    <br>
-    <section id="projects">
-    <br>
-    <h2>Recent Projects</h2>
-      <div id="project-boxes">  
-        <div class="project-tile">
-          <h3>Tribute Page</h3>
-          <a class="profile-link" href="https://github.com/MrDreKC/fCC_Tribute-Page" target="_blank">GitHub</a>
+  
+    <section class="projects" id="projects">
+    <h2 class="heading">Recent <span>Projects</span></h2>
+      <div class="project-container">  
+        <div class="project-box">
+          <img src="./images/loading_screen.jpg" alt="load_screen">
+          <div class="project-layer">
+            <h4>Loading Screen</h4>
+            <a href="https://mrdrekc.github.io/PK-Loading-Screen/">GitHub</a>
+          </div>
         </div>
-        <div class="project-tile">
-          <h3>Skyline</h3>
-          <a class="profile-link" href="https://github.com/MrDreKC/fCC_Skyline" target="_blank">GitHub</a>
+        <div class="project-box">
+          <img src="./images/bg_generator.jpg" alt="bg_generator">
+          <div class="project-layer">
+            <h4>BG Generator</h4>
+            <a  href="https://mrdrekc.github.io/BG-Generator/">GitHub</a>
+          </div>
         </div>
-        <div class="project-tile">
-          <h3>Procdut Page</h3>
-          <a class="profile-link" href="https://github.com/MrDreKC/fCC_Product-Page" target="_blank">GitHub</a>
+        <div class="project-box">
+          <img src="./images/button_layout.jpg" alt="button_layout">
+          <div class="project-layer">
+            <h4>Button Layout</h4>
+            <a href="https://mrdrekc.github.io/Button-Layout/">GitHub</a>
+          </div>
         </div>
-      </div class="project-boxes">
-    </section>
-    <!--projects -->
-    <!--contact -->
-    <section id="contacts">
-    <br>
-    <h2>Contact Me</h2>
-      <div id="contact-links"> 
-        <a class="contact-link" target="_blank" href="dre_cunningham@yahoo.com">Yahoo</a>
-        <a class="contact-link" target="_blank" href="www.linkedin.com/in/drecunningham">Linkedin</a>
-        <a class="contact-link" target="_blank" href="https://github.com/MrDreKC">GitHub</a> 
+        <div class="project-box">
+          <img src="./images/colmar_academy.jpg" alt="colmar_academy">
+          <div class="project-layer">
+            <h4>Colmar Academy</h4>
+            <a href="https://mrdrekc.github.io/Cap_Colmar-Academy/">GitHub</a>
+          </div>
+        </div>
       </div>
-    </section>
-    <!--contact -->
+    </section> 
+    
   </body>
 </html>
