--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <!--Navagation-->
-
     <header class="header">
       <a href="#" class="logo">MrDreKC</a>
       <i class='bx bx-menu' id="menu-icon"></i>
@@ -19,14 +18,12 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
-
-    <!--intro -->
-
+    <!--Intro -->
     <section class="intro" id="intro">
       <div class="intro-content">
         <h3> What's Up Everbody</h3> 
         <h1>Andre C</h1>
-        <h3>I'm a <span>Web Designer</span></h3> 
+        <h3>I'm a <span class="multiple-text"></span></h3> 
         <p>Located in Guyton, GA. An introvet in the begin, but I do open up given time. I enjoy anime, gaming, &amp comic book movies. Currently focused on Web development, but also learning a little Python for Software Engineering.</p> 
         <div class="social-media">
           <a href="dre_cunningham@yahoo.com"><i class='bx bxl-yahoo' ></i></a>
@@ -35,9 +32,7 @@
         </div> 
       </div>
     </section>
-    
-    <!--projects -->
-  
+    <!--Projects -->
     <section class="projects" id="projects">
     <h2 class="heading">Recent <span>Projects</span></h2>
       <div class="project-container">  
@@ -70,7 +65,29 @@
           </div>
         </div>
       </div>
-    </section> 
-    
+    </section>
+    <!--Contact-->
+    <section class="contact" id="contact">
+      <h2 class="heading">Contact <span>Me</span></h2>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Full Name">
+          <input type="text" placeholder="Email Address">
+        </div>
+        <div>
+          <textarea name="" id="" cols="30" rows="20" placeholder="Your Message"></textarea>
+          <input type="submit" value="Submit" class="btn">
+        </div>
+      </form>
+    </section>
+    <!--Footer-->
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2024 by Andre Cunningham | All Rights Reserved</p>
+      </div>
+    </footer>
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+  <script src="script.js"></script>
   </body>
 </html>
