--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
           <img src="./images/loading_screen.jpg" alt="load_screen">
           <div class="project-layer">
             <h4>Loading Screen</h4>
-            <a href="https://mrdrekc.github.io/PK-Loading-Screen/">GitHub</a>
+            <a href="https://mrdrekc.github.io/PK-Loading-Screen/"><i class='bx bxl-github' ></i></a>
           </div>
         </div>
         <div class="project-box">
           <img src="./images/bg_generator.jpg" alt="bg_generator">
           <div class="project-layer">
             <h4>BG Generator</h4>
-            <a  href="https://mrdrekc.github.io/BG-Generator/">GitHub</a>
+            <a  href="https://mrdrekc.github.io/BG-Generator/"><i class='bx bxl-github' ></i></a>
           </div>
         </div>
         <div class="project-box">
           <img src="./images/button_layout.jpg" alt="button_layout">
           <div class="project-layer">
             <h4>Button Layout</h4>
-            <a href="https://mrdrekc.github.io/Button-Layout/">GitHub</a>
+            <a href="https://mrdrekc.github.io/Button-Layout/"><i class='bx bxl-github' ></i></a>
           </div>
         </div>
         <div class="project-box">
           <img src="./images/colmar_academy.jpg" alt="colmar_academy">
           <div class="project-layer">
             <h4>Colmar Academy</h4>
-            <a href="https://mrdrekc.github.io/Cap_Colmar-Academy/">GitHub</a>
+            <a href="https://mrdrekc.github.io/Cap_Colmar-Academy/"><i class='bx bxl-github' ></i></a>
           </div>
         </div>
       </div>
